src/objects/Trigger_Pipeline__mdt/Trigger_Pipeline__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Pipeline</label>
    <pluralLabel>Trigger Pipelines</pluralLabel>
</CustomObject>