src/objects/Trigger_Pipeline__mdt/fields/After_Delete_Enabled__c.field-meta.xml
<CustomField>
    <fullName>After_Delete_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Delete Enabled</label>
    <type>Checkbox</type>
</CustomField>