src/objects/Trigger_Pipeline__mdt/fields/Before_Delete_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Before_Delete_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Delete Enabled</label>
    <type>Checkbox</type>
</CustomField>