src/objects/Trigger_Pipeline__mdt/fields/Before_Update_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Before_Update_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Update Enabled</label>
    <type>Checkbox</type>
</CustomField>