src/objects/Trigger_Pipeline__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Pipelines</relationshipLabel>
    <relationshipName>Trigger_Pipelines</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>